snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
e9c588fb3d865819de747f0adf29a7bc7bcc4ffb0900e47c2419857d147cd10c